--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -99,55 +99,55 @@ td > p {
                     <tr>
                         <td><p>First attending university?</p></td>
                         <td>
-                            <input type="checkbox" name="first_attending_university" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.law_application %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="first_attending_university" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.law_application %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Law application?</p></td>
                         <td>
-                            <input type="checkbox" name="law_application" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.law_application %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="law_application" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.law_application %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Early application?</p></td>
                         <td>
-                            <input type="checkbox" name="early_application" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.early_application %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="early_application" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.early_application %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Low income family?</p></td>
                         <td>
-                            <input type="checkbox" name="low_income_family" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.low_income_family %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="low_income_family" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.low_income_family %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Care experienced?</p></td>
                         <td>
-                            <input type="checkbox" name="care_experienced" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.care_experienced %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="care_experienced" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.care_experienced %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Young carer?</p></td>
                         <td>
-                            <input type="checkbox" name="young_carer" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.young_carer %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="young_carer" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.young_carer %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Estranged?</p></td>
                         <td>
-                            <input type="checkbox" name="estranged" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.estranged %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="estranged" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.estranged %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>HN only candidate?</p></td>
                         <td>
-                            <input type="checkbox" name="hn_only_candidate" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.hn_only_candidate %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="hn_only_candidate" value="yes"{% if student %}{% if student.data.interview %}{% if student.data.interview.hn_only_candidate %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
                     <tr>
                         <td><p>Previous S5 interview?</p></td>
                         <td>
-                            <input type="checkbox" name="previous_s5_interview" value="yes" {% if student %}{% if student.data.interview %}{% if student.data.interview.previous_s5_interview %}checked{% endif %}{% endif %}{% endif %}> Yes 
+                            <input type="checkbox" name="previous_s5_interview" value="yes" {% if student %}{% if student.data.interview %}{% if student.data.interview.previous_s5_interview %}checked{% endif %}{% endif %}{% endif %}>
                         </td>
                     </tr>
 
