--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -193,6 +193,8 @@ td > p {
                 </tbody>
             </table>
             
+            <p>After you save the form it will be reviewed by LEAPS staff, then the action plan will be sent to the student.</p>
+            
             </form>
 
         </div>
