--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -193,7 +193,7 @@ td > p {
                 </tbody>
             </table>
             
-            <p>After you save the form it will be reviewed by LEAPS staff, then the action plan will be sent to the student.</p>
+            <p><br>After you save the form it will be reviewed by LEAPS staff, then the action plan will be sent to the student.</p>
             
             </form>
 
