--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1070,7 +1070,7 @@ fieldset{
 	        <p>
 	            Interviewer: 
 				<select name="interviewer">
-				{% for opt in selections.interviewers %}
+				{% for opt in interviewers %}
 				    <option></option>
 					<option
 					{% if record %}
