--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -130,7 +130,7 @@ jQuery(document).ready(function() {
             {'field':'summer_school.exact', 'display': 'Summer school'},
             {'field':'interviewer.exact', 'display': 'Interviewer', 'size':100}
         ],
-        fields: ['last_name', 'first_name', 'date_of_birth','post_code','simd_decile','school','interviewer','status','archive','id'],
+        fields: ['last_name', 'first_name', 'date_of_birth','post_code','simd_decile','school','status','archive','id'],
         paging: {
             from: 0,
             size: 100
@@ -219,11 +219,6 @@ jQuery(document).ready(function() {
                 {
                     "pre": "<td>",
                     "field": "status",
-                    "post": "</td>"
-                },
-                {
-                    "pre": "<td>",
-                    "field": "interviewer",
                     "post": "</td>"
                 },
                 {
