--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -79,7 +79,7 @@
             {% if current_user.view_admin %}
             <a class="btn btn-success" href="/account/{{current_user.id}}" style="min-width:110px;">Account settings</a>
             {% endif %}
-            <a class="btn btn-success" href="/account/logout" style="min-width:110px;">Logout of LEAPS</a></p>
+            <a class="btn btn-success" href="/account/logout" style="min-width:110px;">Logout</a></p>
         </div>
     </div>
 </div>
