--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -77,7 +77,7 @@
             </p>
             <p>
             {% if current_user.view_admin %}
-            <a class="btn btn-success" href="/account/{{current_user.id}}" style="min-width:110px;">Account settings</a>
+            <a class="btn btn-success" href="/account/{{current_user.id}}" style="min-width:110px;">Account</a>
             {% endif %}
             <a class="btn btn-success" href="/account/logout" style="min-width:110px;">Logout</a></p>
         </div>
