--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -77,9 +77,9 @@
             </p>
             <p>
             {% if current_user.view_admin %}
-            <a class="btn btn-success" href="/account/{{current_user.id}}" style="min-width:110px;">Account</a>
+            <a class="btn btn-success" href="/account/{{current_user.id}}">Account</a>
             {% endif %}
-            <a class="btn btn-success" href="/account/logout" style="min-width:110px;">Logout</a></p>
+            <a class="btn btn-success" href="/account/logout">Logout</a></p>
         </div>
     </div>
 </div>
