--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -183,7 +183,7 @@ td > p {
                     </tr>
                     {% if current_user.do_admin %}
                     <tr>
-                        <td><p><b style="color:red;">FOR ADMIN USE ONLY</b><br>LEAPS admin notes:<br>(Not included on the action)</p></td>
+                        <td><p>LEAPS admin notes:<br><b style="color:red;">FOR ADMIN USE ONLY</b><br>(Not included on the action plan)</p></td>
                         <td><textarea class="bigfield" name="leaps_admin_notes">{% if student %}{% if student.data.interview %}{{ student.data.interview.leaps_admin_notes }}{% endif %}{% endif %}</textarea></td>
                     </tr>
                     {% endif %}
