--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -247,6 +247,9 @@ td > p {
 
                     <tr style="background-color:#ccc">
                         <td><h4>PAEs required?</h4></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
 
                     <tr style="background-color:#ccc;">
@@ -287,10 +290,10 @@ td > p {
                 		<td></td>
                     </tr>
 
-                    <tr style="border-bottom:1px solid #ccc;margin-bottom:15px;"><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
+                    <tr style="border-bottom:1px solid #ccc;"><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
                     
 
-                    <tr>
+                    <tr style="margin-top:15px;">
                         <td><p>Specific subjects required?</p></td>
                         <td><textarea class="bigfield" name="specific_subjects_required">{% if student %}{% if student.data.interview %}{{ student.data.interview.specific_subjects_required }}{% endif %}{% endif %}</textarea></td>
                     </tr>
