--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -260,8 +260,8 @@ td > p {
                     </tr>
 
                     {% if student %}{% if student.data.interview %}{% if student.data.interview.applications %}{% for app in student.data.interview.applications %}
-                    <tr>
-                		<td style="min-height:50px;"><input name="application_institution" type="hidden" value="{{app.institution}}" style="min-width:170px;">{{app.institution}}</td>
+                    <tr style="min-height:50px;">
+                		<td><input name="application_institution" type="hidden" value="{{app.institution}}" style="min-width:170px;">{{app.institution}}</td>
                 		<td><input name="application_subject" type="hidden" value="{{app.subject}}" style="min-width:170px;">{{app.subject}}</td>
                 		<td><input name="application_level" type="hidden" value="{{app.level}}" style="min-width:100px;">{{app.level}}</td>
                 		<td><a class="btn btn-warning delete-row" style="margin:-10px 47px 0 0;" href="#">delete</a></td>
@@ -290,10 +290,10 @@ td > p {
                 		<td></td>
                     </tr>
 
-                    <tr style="border-bottom:1px solid #ccc;"><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
+                    <tr style="padding-bottom:15px;"><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
                     
 
-                    <tr style="margin-top:15px;">
+                    <tr>
                         <td><p>Specific subjects required?</p></td>
                         <td><textarea class="bigfield" name="specific_subjects_required">{% if student %}{% if student.data.interview %}{{ student.data.interview.specific_subjects_required }}{% endif %}{% endif %}</textarea></td>
                     </tr>
