--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -260,12 +260,13 @@ td > p {
                     </tr>
 
                     {% if student %}{% if student.data.interview %}{% if student.data.interview.applications %}{% for app in student.data.interview.applications %}
-                    <tr style="min-height:50px;">
+                    <tr>
                 		<td><input name="application_institution" type="hidden" value="{{app.institution}}" style="min-width:170px;">{{app.institution}}</td>
                 		<td><input name="application_subject" type="hidden" value="{{app.subject}}" style="min-width:170px;">{{app.subject}}</td>
                 		<td><input name="application_level" type="hidden" value="{{app.level}}" style="min-width:100px;">{{app.level}}</td>
                 		<td><a class="btn btn-warning delete-row" style="margin:-10px 47px 0 0;" href="#">delete</a></td>
                     </tr>
+                    <tr><td></td></tr>
                     {% endfor %}{% endif %}{% endif %}{% endif %}
 
                     <tr>
@@ -290,7 +291,8 @@ td > p {
                 		<td></td>
                     </tr>
 
-                    <tr style="padding-bottom:15px;"><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
+                    <tr><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
+                    <tr><td></td></tr>
                     
 
                     <tr>
