--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -266,7 +266,7 @@ td > p {
                 		<td><input name="application_level" type="hidden" value="{{app.level}}" style="min-width:100px;">{{app.level}}</td>
                 		<td><a class="btn btn-warning delete-row" style="margin:-10px 47px 0 0;" href="#">delete</a></td>
                     </tr>
-                    <tr><td></td></tr>
+                    <tr><td><br></td></tr>
                     {% endfor %}{% endif %}{% endif %}{% endif %}
 
                     <tr>
@@ -292,7 +292,7 @@ td > p {
                     </tr>
 
                     <tr><td><a class="btn btn-success add-row" href="#">add another</a><br></td></tr>
-                    <tr><td></td></tr>
+                    <tr style="border-top:1px solid #ccc;"><td><br></td></tr>
                     
 
                     <tr>
